# opengles_learn

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/czb/opengles3_0/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/: texture_fs.glsl  texture_vs.glsl  triangle_vs.glsl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: MyGLRenderContext.h
app/src/main/cpp/src/: GLUtils.cpp  GLUtils.h  MyGLRenderContext.cpp  MyGLRenderContext.h  android_log.h  filesystem.h  globalAssetManager.h  log_utils.h  native_lib.cpp  root_directory.h.in  stb_image.h
app/src/main/cpp/src/sample/: SampleBase.h  SampleLight.cpp  SampleLight.h  SampleSquare.cpp  SampleSquare.h  SampleTexture.cpp  SampleTexture.h  SampleTransform.cpp  SampleTransform.h  SampleTriangle.cpp  SampleTriangle.h  test.cpp  test.h
app/src/main/cpp/src/sample/SampleTexture_shader/: fs.glsl
app/src/main/cpp/src/sample/SampleTriangle_shader/: fs.glsl
app/src/main/java/com/czb/opengles3_0/: AssetUtils.kt  MainActivity.kt  MyApplication.kt  MyGLSurfaceRenderer.kt  MyGLSurfaceView.kt  MyNativeRenderer.kt  Utils.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/czb/opengles3_0/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
